# orchestra

./: .gitignore  Cargo.toml  README.MD  pyproject.toml  report.md
benches/: local_arithmetic.rs
benchmarks/python/: asyncio_local.py  benchmark_common.py  graph_shapes.py  langgraph_local.py  orchestra_llm.py  orchestra_local.py  requirements.txt  run_local_suite.py
examples/: arithmetic.rs  arithmetic_shapes.rs  crazy_dag.rs  failure.rs  fan_in.rs  graph_shapes.rs  llm_groq.rs  parallel.rs  python_arithmetic.py  python_llm_arithmetic.py  sequential.rs  trace.rs
examples/support/: arithmetic_graphs.rs  mod.rs  synthetic_graphs.rs
python_tests/: test_bindings.py
src/: error.rs  event.rs  fake.rs  flow.rs  lib.rs  llm.rs  python.rs  scheduler.rs  task.rs  telemetry.rs
tests/: arithmetic_graphs.rs  synthetic_graphs.rs
